--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <html>
   <head>
     <title>ZBG Consolidated</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
     <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&family=Roboto+Slab:wght@200;400;700&display=swap" rel="stylesheet">  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&family=Roboto+Slab:wght@200;400;700&display=swap" rel="stylesheet">  
+  </head>
   <body>
   <!--  NAV MENU -->
+
     <header>
       <h3 class="company-name dark">ZBG Consolidated</h5>
       <nav>
         <div class="dark">MISSION | TEAM | CONTACT</div>
       </nav>
-  </header>
-  <main>
+    </header>
+    <main>
 
   <!--  BANNER  -->
 
@@ -95,7 +98,7 @@
     <article id="contact">
       <div class="contact-container dark">
         <h3>Contact Us</h3>
-        <p><a href="#contact">zigy-bibut-goostavh@reelcatwibsite.com</a></p>
+        <!-- <p><a href="#contact">zigy-bibut-goostavh@reelcatwibsite.com</a></p> -->
         <p>467 Where We Live St.</p>
         <p>Anna and Guy's Place</p>
         <h4>Gus</h4>
