--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <header>
       <h3 class="company-name dark">ZBG Consolidated</h5>
       <nav>
-        <div class="dark">MISSION | TEAM | CONTACT</div>
+        <div class="dark">
+          <a href="#mission">MISSION</a>
+          <a href="#team">TEAM</a>
+          <a href="#contact" id="last-nav-link">CONTACT</a>
+          </div>
       </nav>
     </header>
     <main>
@@ -98,7 +102,7 @@
     <article id="contact">
       <div class="contact-container dark">
         <h3>Contact Us</h3>
-        <!-- <p><a href="#contact">zigy-bibut-goostavh@reelcatwibsite.com</a></p> -->
+        <p><a href="#contact">zigy-bibut-goostavh@reelcatwibsite.com</a></p>
         <p>467 Where We Live St.</p>
         <p>Anna and Guy's Place</p>
         <h4>Gus</h4>
