added random hero image script

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
   <head>
     <title>ZBG Consolidated</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" ></script> -->
+    <!-- <script type="text/javascript">
+      $(function() {
+       var images = ['OUT01ari.jpg', 'OUT02adobe.jpg', 'OUT03alife.jpg', 'OUT04chinup.jpg', 'OUT05datenightwinecologne.jpg', 'OUT06officechair.jpg', 'OUT07printer.jpg', 'OUT08whitewall.jpg', 'OUT09umbrella.jpg', 'OUT10converse.jpg', 'OUT11wardrobebar.jpg'];
+       $('#background').css({'background-image': 'url(' + images[Math.floor(Math.random() * images.length)] + ')'});
+      });
+    </script> -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
     <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&family=Roboto+Slab:wght@200;400;700&display=swap" rel="stylesheet">  
   </head>
@@ -15,8 +23,9 @@
 
     <header>
       <h3 class="company-name dark">ZBG Consolidated</h5>
-      <nav>
-        <div class="dark">
+      <nav class="dropdown">
+          <div tabindex="0" class="dropbtn menu-button material-icons">menu</div>
+          <div class="dropdown-content dark">
           <a href="#mission">MISSION</a>
           <a href="#team">TEAM</a>
           <a href="#contact" id="last-nav-link">CONTACT</a>
@@ -33,6 +42,7 @@
         <h4>we do the cat things</h4>
     </div>
     </article>
+    <script src="resources/script/random-hero.js" type="text/javascript"></script>
 
   <!--  MISSION  -->
 
