--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <head>
     <title>ZBG Consolidated</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" ></script> -->
-    <!-- <script type="text/javascript">
-      $(function() {
-       var images = ['OUT01ari.jpg', 'OUT02adobe.jpg', 'OUT03alife.jpg', 'OUT04chinup.jpg', 'OUT05datenightwinecologne.jpg', 'OUT06officechair.jpg', 'OUT07printer.jpg', 'OUT08whitewall.jpg', 'OUT09umbrella.jpg', 'OUT10converse.jpg', 'OUT11wardrobebar.jpg'];
-       $('#background').css({'background-image': 'url(' + images[Math.floor(Math.random() * images.length)] + ')'});
-      });
-    </script> -->
+    <link rel="preload" href="resources/img/hero-halloween.jpg" as="image">
+    <link rel="preload" href="resources/img/hero-high-window.jpg" as="image">
+    <link rel="preload" href="resources/img/hero-sewing-desk.jpg" as="image">
+    <link rel="preload" href="resources/img/hero-window-watchers.jpg" as="image">
+    <link rel="preload" href="resources/img/hero-zig-crotch.jpg" as="image">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="resources/css/styles.css">
     <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
@@ -19,7 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&family=Roboto+Slab:wght@200;400;700&display=swap" rel="stylesheet">  
   </head>
   <body>
-  <!--  NAV MENU -->
+
+    <!--  NAV MENU -->
 
     <header>
       <h3 class="company-name dark">ZBG Consolidated</h5>
