--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <body>
 
     <!--  NAV MENU -->
-
+    <div onclick="topFunction()" id="myBtn" class="material-icons" title="Go to top">keyboard_arrow_up</div>
+    <script src="resources/script/scroll-btn.js" type="text/javascript"></script>
     <header>
       <h3 class="company-name dark">ZBG Consolidated</h5>
       <nav class="dropdown">
@@ -95,7 +96,7 @@
             </ul>
           </div>
           <div class="team-card">
-            <img id="last-team-img" src="resources/img/gustav.jpg">
+            <img src="resources/img/gustav.jpg">
             <p class="team-name">Gustav</p>
             <ul class="skills">
               <li>baby rat hunter</li>
