--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <!--  NAV MENU -->
-    <div onclick="topFunction()" id="myBtn" class="material-icons" title="Go to top">keyboard_arrow_up</div>
+    <div tabindex="0" onclick="topFunction()" id="myBtn" class="material-icons" title="Go to top">keyboard_arrow_up</div>
     <script src="resources/script/scroll-btn.js" type="text/javascript"></script>
     <header>
       <h3 class="company-name dark">ZBG Consolidated</h5>
