--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en-US">
   <head>
     <title>ZBG Consolidated</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +14,11 @@
   <body>
 
     <!--  NAV MENU -->
-    <div tabindex="0" onclick="topFunction()" id="myBtn" class="material-icons" title="Go to top">keyboard_arrow_up</div>
-    <script src="resources/script/scroll-btn.js" type="text/javascript"></script>
+    <div tabindex="0" onclick="topFunction()" id="topBtn" class="material-icons" title="Go to top">keyboard_arrow_up</div>
+    <script src="resources/script/scroll-btn.js"></script>
+
     <header>
-      <h3 class="company-name dark">ZBG Consolidated</h5>
+      <h3 class="company-name dark">ZBG Consolidated</h3>
       <nav class="dropdown">
           <div tabindex="0" class="dropbtn menu-button material-icons">menu</div>
           <div class="dropdown-content dark">
@@ -37,7 +38,7 @@
         <h4>we do the cat things</h4>
     </div>
     </article>
-    <script src="resources/script/random-hero.js" type="text/javascript"></script>
+    <script src="resources/script/random-hero.js"></script>
 
   <!--  MISSION  -->
 
@@ -45,23 +46,23 @@
       <h2>OUR MISSION</h2>
       <div class="mission-card-container">
           <div class="mission-card">
-            <img src="resources/img/snuggles.jpg">
+            <img src="resources/img/snuggles.jpg" alt="Cats snuggling on a couch">
             <p>Snuggles</p>
           </div>
           <div class="mission-card">
-            <img src="resources/img/cuddles.jpg">
+            <img src="resources/img/cuddles.jpg" alt="Cat cuddled in a hoodie">
             <p>Cuddles</p>
           </div>      
           <div class="mission-card">
-            <img src="resources/img/headphones.jpg">
+            <img src="resources/img/headphones.jpg" alt="Cat wearing headphones">
             <p>Headphones</p>
           </div>
           <div class="mission-card">
-            <img src="resources/img/baps.jpg">
+            <img src="resources/img/baps.jpg" alt="On cat bapping another cat in the face">
             <p>Baps</p>
           </div>
           <div class="mission-card">
-            <img src="resources/img/naps.jpg">
+            <img src="resources/img/naps.jpg" alt="Cat napping so hard">
             <p>Naps</p>
           </div>
         </div>
@@ -73,7 +74,7 @@
       <h2>OUR TEAM</h2>
         <div class="team-card-container">
           <div class="team-card">
-            <img src="resources/img/zip-nap-tail.jpg">
+            <img src="resources/img/zip-nap-tail.jpg" alt="Ziggy the cat">
             <p class="team-name">Ziggy</p>
             <ul class="skills">
               <li>couch naps</li>
@@ -82,7 +83,7 @@
             </ul>
           </div>
           <div class="team-card">
-            <img src="resources/img/bibbit-1.jpg">
+            <img src="resources/img/bibbit-1.jpg" alt="Bibbit the cat">
             <p class="team-name">Bibbit</p>
             <ul class="skills">
               <li>tiny journey to the<br>center of the Earth</li>
@@ -91,7 +92,7 @@
             </ul>
           </div>
           <div class="team-card">
-            <img src="resources/img/gustav.jpg">
+            <img src="resources/img/gustav.jpg" alt="Gustav the cat">
             <p class="team-name">Gustav</p>
             <ul class="skills">
               <li>baby rat hunter</li>
