mission trantisions, fixed some issues

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
 
     <!--  NAV MENU -->
+
     <div tabindex="0" onclick="topFunction()" id="topBtn" class="material-icons" title="Go to top">keyboard_arrow_up</div>
     <script src="resources/script/scroll-btn.js"></script>
 
@@ -22,9 +23,9 @@
       <nav class="dropdown">
           <div tabindex="0" class="dropbtn menu-button material-icons">menu</div>
           <div class="dropdown-content dark">
-          <a href="#mission">MISSION</a>
-          <a href="#team">TEAM</a>
-          <a href="#contact" id="last-nav-link">CONTACT</a>
+          <a href="#mission-landing">MISSION</a>
+          <a href="#team-landing">TEAM</a>
+          <a href="#contact-landing" id="last-nav-link">CONTACT</a>
           </div>
       </nav>
     </header>
@@ -42,8 +43,8 @@
 
   <!--  MISSION  -->
 
-    <article id="mission">
-      <h2>OUR MISSION</h2>
+    <article class="mission">
+      <h2><span id="mission-landing"></span>OUR MISSION</h2>
       <div class="mission-card-container">
           <div class="mission-card">
             <img src="resources/img/snuggles.jpg" alt="Cats snuggling on a couch">
@@ -71,7 +72,7 @@
   <!--  TEAM  -->
 
     <article id="team">
-      <h2>OUR TEAM</h2>
+      <h2><span id="team-landing"></span>OUR TEAM</h2>
         <div class="team-card-container">
           <div class="team-card">
             <img src="resources/img/zip-nap-tail.jpg" alt="Ziggy the cat">
@@ -107,7 +108,7 @@
 
     <article id="contact">
       <div class="contact-container dark">
-        <h3>Contact Us</h3>
+        <h2><span id="contact-landing"></span>Contact Us</h2>
         <p><a href="#contact">zigy-bibut-goostavh@reelcatwibsite.com</a></p>
         <p>467 Where We Live St.</p>
         <p>Anna and Guy's Place</p>
